------------------------------------------------------------------------------

                  What's new in each version of Interchange

------------------------------------------------------------------------------


Interchange 4.8.7 released 2003-01-30.

Core
----

* Fix bug where Interchange got stuck into an infinite loop on startup in case
  of wrong SQL database access information, which occurs on the second table
  maybe due to the bad setting in DBI.

* UserDB.pm: [userdb function=logout clear=1] will now restore the appropriate
  ScratchDefault and ValuesDefault values instead of simply deleting the
  scratches and values under its control.

* Fix persistence problems in PreFork mode:
  - [more-list] settings
  - profile state

* Table/DBI.pm: Simplify field_settor subroutines with prepared query and
  placeholder. Prevents infamous DBD::Pg::do errors.

* Server.pm:
  - Output proper header so missing script will be seen as 404.
  - Fix whitespace transform, tolerate leading whitespace on header lines.
  - Apache 2.0.x compatibility fix for problem described here:
    http://www.icdevgroup.org/pipermail/interchange-users/2002-August/024212.html

* Fix bug where bad [nitems compare=...] could cause server error.

* Tolerate following previously unallowed constructs:

  [if-loop-param fieldname =~ /abc/i]
  (and/or options s, m, x)

  [if-loop-param fieldname =~ /abc/ ]
  [if-loop-param fieldname =~ /a b c/]
  (space in or after regex caused regex compilation to fail before)

* Fixed a problem that prevented the following from working:
  [input-filter name="[quantity-name]" op="nullselect digits_dot"]
  [/input-filter]

* Config.pm:
  - Tolerate missing configdb database, issue warning only.
  - pass Perl error message if Sub fails to compile

* Allow the 'md' (mv_more_decade) parameter to be specified with tags
  such as [query].

* Don't reject ZIP+4 without hyphen in 'zip' profile check.
