@@ -1,25 +1,10 @@
-LICENSE
-MANIFEST
-MANIFEST.SKIP
-Makefile.PL
-README
-README.cvs
-README.debian
-README.rpm
-SPECS/interchange-init
-SPECS/interchange-logrotate
-SPECS/interchange-wrapper
-SPECS/interchange.spec
-UPGRADE
-WHATSNEW
 configure
 debian/400mod_interchange.info
-debian/CREDITS.debian
-debian/TODO
 debian/catalogs.cfg
 debian/changelog
 debian/control
 debian/copyright
+debian/CREDITS.debian
 debian/docs
 debian/interchange-cat-foundation.config
 debian/interchange-cat-foundation.files
@@ -55,6 +40,7 @@ debian/libapache-mod-interchange.files
 debian/makecat.cfg
 debian/makecat.wrapper
 debian/rules
+debian/TODO
 dist/catalog_after.cfg
 dist/catalog_before.cfg
 dist/error.log
@@ -68,8 +54,6 @@ dist/foundation/config/makedirs
 dist/foundation/config/postcopy_commands
 dist/foundation/config/precopy_commands
 dist/foundation/dbconf/default_db/2ndDayAir.dbm
-dist/foundation/dbconf/default_db/Ground.dbm
-dist/foundation/dbconf/default_db/NextDayAir.dbm
 dist/foundation/dbconf/default_db/access.dbm
 dist/foundation/dbconf/default_db/affiliate.dbm
 dist/foundation/dbconf/default_db/area.dbm
@@ -78,10 +62,12 @@ dist/foundation/dbconf/default_db/component.dbm
 dist/foundation/dbconf/default_db/country.dbm
 dist/foundation/dbconf/default_db/default_db.cfg
 dist/foundation/dbconf/default_db/gift_certs.dbm
+dist/foundation/dbconf/default_db/Ground.dbm
 dist/foundation/dbconf/default_db/inventory.dbm
 dist/foundation/dbconf/default_db/locale.dbm
 dist/foundation/dbconf/default_db/merchandising.dbm
 dist/foundation/dbconf/default_db/mv_metadata.dbm
+dist/foundation/dbconf/default_db/NextDayAir.dbm
 dist/foundation/dbconf/default_db/options.dbm
 dist/foundation/dbconf/default_db/order_returns.dbm
 dist/foundation/dbconf/default_db/orderline.dbm
@@ -92,8 +78,6 @@ dist/foundation/dbconf/default_db/transactions.dbm
 dist/foundation/dbconf/default_db/userdb.dbm
 dist/foundation/dbconf/default_db/variable.dbm
 dist/foundation/dbconf/mysql/2ndDayAir.dbm
-dist/foundation/dbconf/mysql/Ground.dbm
-dist/foundation/dbconf/mysql/NextDayAir.dbm
 dist/foundation/dbconf/mysql/access.dbm
 dist/foundation/dbconf/mysql/affiliate.mysql
 dist/foundation/dbconf/mysql/area.mysql
@@ -101,11 +85,13 @@ dist/foundation/dbconf/mysql/cat.mysql
 dist/foundation/dbconf/mysql/component.dbm
 dist/foundation/dbconf/mysql/country.mysql
 dist/foundation/dbconf/mysql/gift_certs.mysql
+dist/foundation/dbconf/mysql/Ground.dbm
 dist/foundation/dbconf/mysql/inventory.mysql
 dist/foundation/dbconf/mysql/locale.dbm
 dist/foundation/dbconf/mysql/merchandising.mysql
 dist/foundation/dbconf/mysql/mv_metadata.dbm
 dist/foundation/dbconf/mysql/mysql.cfg
+dist/foundation/dbconf/mysql/NextDayAir.dbm
 dist/foundation/dbconf/mysql/options.mysql
 dist/foundation/dbconf/mysql/order_returns.mysql
 dist/foundation/dbconf/mysql/orderline.mysql
@@ -116,8 +102,6 @@ dist/foundation/dbconf/mysql/transactions.mysql
 dist/foundation/dbconf/mysql/userdb.mysql
 dist/foundation/dbconf/mysql/variable.dbm
 dist/foundation/dbconf/oracle/2ndDayAir.dbm
-dist/foundation/dbconf/oracle/Ground.dbm
-dist/foundation/dbconf/oracle/NextDayAir.dbm
 dist/foundation/dbconf/oracle/access.dbm
 dist/foundation/dbconf/oracle/affiliate.ora
 dist/foundation/dbconf/oracle/area.ora
@@ -125,10 +109,12 @@ dist/foundation/dbconf/oracle/cat.ora
 dist/foundation/dbconf/oracle/component.dbm
 dist/foundation/dbconf/oracle/country.ora
 dist/foundation/dbconf/oracle/gift_certs.ora
+dist/foundation/dbconf/oracle/Ground.dbm
 dist/foundation/dbconf/oracle/inventory.ora
 dist/foundation/dbconf/oracle/locale.dbm
 dist/foundation/dbconf/oracle/merchandising.ora
 dist/foundation/dbconf/oracle/mv_metadata.dbm
+dist/foundation/dbconf/oracle/NextDayAir.dbm
 dist/foundation/dbconf/oracle/options.ora
 dist/foundation/dbconf/oracle/oracle.cfg
 dist/foundation/dbconf/oracle/order_returns.ora
@@ -140,8 +126,6 @@ dist/foundation/dbconf/oracle/transactions.ora
 dist/foundation/dbconf/oracle/userdb.ora
 dist/foundation/dbconf/oracle/variable.dbm
 dist/foundation/dbconf/pgsql/2ndDayAir.dbm
-dist/foundation/dbconf/pgsql/Ground.dbm
-dist/foundation/dbconf/pgsql/NextDayAir.dbm
 dist/foundation/dbconf/pgsql/access.dbm
 dist/foundation/dbconf/pgsql/affiliate.pgsql
 dist/foundation/dbconf/pgsql/area.pgsql
@@ -149,10 +133,12 @@ dist/foundation/dbconf/pgsql/cat.pgsql
 dist/foundation/dbconf/pgsql/component.dbm
 dist/foundation/dbconf/pgsql/country.pgsql
 dist/foundation/dbconf/pgsql/gift_certs.pgsql
+dist/foundation/dbconf/pgsql/Ground.dbm
 dist/foundation/dbconf/pgsql/inventory.pgsql
 dist/foundation/dbconf/pgsql/locale.dbm
 dist/foundation/dbconf/pgsql/merchandising.pgsql
 dist/foundation/dbconf/pgsql/mv_metadata.dbm
+dist/foundation/dbconf/pgsql/NextDayAir.dbm
 dist/foundation/dbconf/pgsql/options.pgsql
 dist/foundation/dbconf/pgsql/order_returns.pgsql
 dist/foundation/dbconf/pgsql/orderline.pgsql
@@ -257,8 +243,6 @@ dist/foundation/pages/stock-alert.html
 dist/foundation/pages/swap_results.html
 dist/foundation/products/2ndDayAir.csv
 dist/foundation/products/450.csv
-dist/foundation/products/Ground.csv
-dist/foundation/products/NextDayAir.csv
 dist/foundation/products/access.asc
 dist/foundation/products/affiliate.txt
 dist/foundation/products/area.txt
@@ -268,10 +252,12 @@ dist/foundation/products/country.txt
 dist/foundation/products/downloadable.txt
 dist/foundation/products/files.txt
 dist/foundation/products/gift_certs.txt
+dist/foundation/products/Ground.csv
 dist/foundation/products/inventory.txt
 dist/foundation/products/locale.txt
 dist/foundation/products/merchandising.txt
 dist/foundation/products/mv_metadata.asc
+dist/foundation/products/NextDayAir.csv
 dist/foundation/products/options.txt
 dist/foundation/products/order_returns.txt
 dist/foundation/products/orderline.txt
@@ -448,11 +434,8 @@ dist/foundation/upload/.empty
 dist/foundation/upload/products.xls
 dist/foundation/upload/sampledata.xls
 dist/interchange.cfg.dist
-dist/lib/UI/Primitive.pm
 dist/lib/UI/ichelp.txt
 dist/lib/UI/icmenu.txt
-dist/lib/UI/locales/README
-dist/lib/UI/locales/TODO
 dist/lib/UI/locales/da_DK.cfg
 dist/lib/UI/locales/de_DE.cfg
 dist/lib/UI/locales/default.cfg
@@ -461,7 +444,9 @@ dist/lib/UI/locales/he_IL.cfg
 dist/lib/UI/locales/ja_JP.cfg
 dist/lib/UI/locales/nl_NL.cfg
 dist/lib/UI/locales/pt_BR.cfg
+dist/lib/UI/locales/README
 dist/lib/UI/locales/sv_SE.cfg
+dist/lib/UI/locales/TODO
 dist/lib/UI/pages/admin/.access
 dist/lib/UI/pages/admin/.autoload
 dist/lib/UI/pages/admin/access.html
@@ -582,8 +567,6 @@ dist/lib/UI/pages/admin/user_change_pass.html
 dist/lib/UI/pages/admin/user_edit.html
 dist/lib/UI/pages/admin/wizard/.access
 dist/lib/UI/pages/admin/wizard/.autoload
-dist/lib/UI/pages/admin/wizard/X_dump.html
-dist/lib/UI/pages/admin/wizard/X_test.html
 dist/lib/UI/pages/admin/wizard/demo_init.html
 dist/lib/UI/pages/admin/wizard/demo_zero.html
 dist/lib/UI/pages/admin/wizard/do_launch.html
@@ -615,6 +598,8 @@ dist/lib/UI/pages/admin/wizard/step_ship_ups.html
 dist/lib/UI/pages/admin/wizard/step_style.html
 dist/lib/UI/pages/admin/wizard/step_style_logo.html
 dist/lib/UI/pages/admin/wizard/step_tax.html
+dist/lib/UI/pages/admin/wizard/X_dump.html
+dist/lib/UI/pages/admin/wizard/X_test.html
 dist/lib/UI/pages/include/item_option_matrix
 dist/lib/UI/pages/include/item_option_modular
 dist/lib/UI/pages/include/item_option_simple
@@ -626,6 +611,7 @@ dist/lib/UI/pages/include/page_save_old
 dist/lib/UI/pages/include/table_populator
 dist/lib/UI/pages/include/wizard_checklist
 dist/lib/UI/pages/include/wizard_profiles
+dist/lib/UI/Primitive.pm
 dist/lib/UI/profiles/Cancel
 dist/lib/UI/profiles/db_maintenance
 dist/lib/UI/profiles/file_maintenance
@@ -702,10 +688,10 @@ dist/src/config.h.in
 dist/src/configure
 dist/src/cpan_local_install
 dist/src/mod_interchange/Makefile
-dist/src/mod_interchange/README
 dist/src/mod_interchange/mod_interchange.c
 dist/src/mod_interchange/mod_interchange.html
 dist/src/mod_interchange/mod_interchange.spec
+dist/src/mod_interchange/README
 dist/src/mod_perl_tlink.pl
 dist/src/mvctl.c
 dist/src/syscfg.in
@@ -748,19 +734,18 @@ eg/globalsub/signio
 eg/globalsub/test_card
 eg/grant.sql
 eg/ifdef
-eg/news_feature/README
 eg/news_feature/dbconf/default_db/news.dbm
 eg/news_feature/dbconf/mysql/news.mysql
 eg/news_feature/dbconf/oracle/news.ora
 eg/news_feature/dbconf/pgsql/news.pgsql
 eg/news_feature/pages/news.html
 eg/news_feature/products/news.txt
+eg/news_feature/README
 eg/news_feature/templates/components/news
 eg/reset_order_number
 eg/te
 eg/usertag/benchmark
 eg/usertag/sleep
-extensions/quickbooks/README
 extensions/quickbooks/etc/trans_quickbooks
 extensions/quickbooks/ic_qb.pod
 extensions/quickbooks/pages/admin/quickbooks/export_coa.html
@@ -770,6 +755,7 @@ extensions/quickbooks/pages/admin/quickbooks/import_items.html
 extensions/quickbooks/pages/admin/quickbooks/index.html
 extensions/quickbooks/qb.catalog.cfg
 extensions/quickbooks/qb_getord.pl
+extensions/quickbooks/README
 extensions/quickbooks/usertag/export_quicken_coa.tag
 extensions/quickbooks/usertag/export_quicken_items.tag
 extensions/quickbooks/usertag/get_quicken_orders.tag
@@ -809,20 +795,20 @@ lib/Vend/Payment/AuthorizeNet.pm
 lib/Vend/Payment/BoA.pm
 lib/Vend/Payment/CCVS.pm
 lib/Vend/Payment/CyberCash.pm
+lib/Vend/Payment/iTransact.pm
 lib/Vend/Payment/Signio.pm
 lib/Vend/Payment/Skipjack.pm
-lib/Vend/Payment/iTransact.pm
-lib/Vend/SOAP.pm
-lib/Vend/SOAP/Transport.pm
 lib/Vend/Scan.pm
 lib/Vend/Search.pm
 lib/Vend/Server.pm
 lib/Vend/Session.pm
 lib/Vend/SessionDB.pm
 lib/Vend/SessionFile.pm
+lib/Vend/SOAP.pm
+lib/Vend/SOAP/Transport.pm
 lib/Vend/Table/Common.pm
-lib/Vend/Table/DBI.pm
 lib/Vend/Table/DB_File.pm
+lib/Vend/Table/DBI.pm
 lib/Vend/Table/GDBM.pm
 lib/Vend/Table/InMemory.pm
 lib/Vend/Table/LDAP.pm
@@ -832,7 +818,10 @@ lib/Vend/TextSearch.pm
 lib/Vend/Track.pm
 lib/Vend/UserDB.pm
 lib/Vend/Util.pm
-perl/Interchange.pm
+LICENSE
+Makefile.PL
+MANIFEST
+MANIFEST.SKIP
 pod/ic_ecommerce.pod
 pod/ic_howto_cvs.pod
 pod/icadvanced.pod
@@ -844,6 +833,10 @@ pod/icfoundation.pod
 pod/ictags.pod
 pod/ictemplates.pod
 pod/icupgrade.pod
+README
+README.cvs
+README.debian
+README.rpm
 scripts/compile_link.PL
 scripts/config_prog.PL
 scripts/configdump.PL
@@ -914,6 +907,7 @@ share/interchange/en_US/down.gif
 share/interchange/en_US/folder.gif
 share/interchange/en_US/folder.open.gif
 share/interchange/en_US/generic.gif
+share/interchange/en_US/iclogo.gif
 share/interchange/en_US/icon_config.gif
 share/interchange/en_US/icon_design.gif
 share/interchange/en_US/icon_error.gif
@@ -929,7 +923,6 @@ share/interchange/en_US/layout.gif
 share/interchange/en_US/left.gif
 share/interchange/en_US/plus.gif
 share/interchange/en_US/poweredby.gif
-share/interchange/en_US/iclogo.gif
 share/interchange/en_US/right.gif
 share/interchange/en_US/smindex.gif
 share/interchange/en_US/spacer1.gif
@@ -1043,4 +1036,11 @@ share/interchange/sv_SE/B8.gif
 share/interchange/sv_SE/B8_b.gif
 share/interchange/sv_SE/B9.gif
 share/interchange/sv_SE/B9_b.gif
+SPECS/interchange-init
+SPECS/interchange-logrotate
+SPECS/interchange-wrapper
+SPECS/interchange.spec
 test.pl
+UPGRADE
+WHATSNEW
+META.yml                                 Module meta-data (added by MakeMaker)
