@@ -2,7 +2,7 @@
 
                            I N T E R C H A N G E
 
-Interchange 4.8.7
+Interchange 4.8.8
 
 Copyright (C) 1996-2003 Red Hat, Inc., and Interchange Development Group.
 
