@@ -1,6 +1,6 @@
-[tmp page_title]
-Sorry, the page (@@MV_PREV_PAGE@@) was not found
-[/tmp]
+[set page_title]
+Sorry, the page ([subject]) was not found
+[/set]
 @_NOLEFT_TOP_@
 
 <p>&nbsp;</p>
