@@ -5,6 +5,12 @@
 ------------------------------------------------------------------------------
 
 
+Interchange 4.8.8 released 2003-12-16.
+
+* Fix security hole with possible SQL injection.
+
+* Fix order import problem found by Karen Gold.
+
 Interchange 4.8.7 released 2003-01-30.
 
 Core
